--- a/src/gui/SellerList.fxml
+++ b/src/gui/SellerList.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="303.0" prefWidth="457.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerListController">
+<VBox prefHeight="303.0" prefWidth="608.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerListController">
    <children>
       <Label prefHeight="27.0" prefWidth="373.0" text="Seller Registration">
          <font>
@@ -26,13 +26,13 @@
       </ToolBar>
       <TableView fx:id="tableViewSeller" prefHeight="234.0" prefWidth="373.0">
         <columns>
-          <TableColumn fx:id="tableColumnId" prefWidth="75.0" text="Id" />
-          <TableColumn fx:id="tableColumnName" prefWidth="75.0" text="Name" />
-            <TableColumn fx:id="tableColumnEmail" prefWidth="75.0" text="Email" />
-            <TableColumn fx:id="tableColumnBirthDate" prefWidth="75.0" text="Birth Date" />
-            <TableColumn fx:id="tableColumnBaseSalary" prefWidth="75.0" text="Base Salary" />
-            <TableColumn fx:id="tableColumnEDIT" prefWidth="75.0" />
-            <TableColumn fx:id="tableColumnREMOVE" prefWidth="75.0" />
+          <TableColumn fx:id="tableColumnId" prefWidth="63.0" text="Id" />
+          <TableColumn fx:id="tableColumnName" prefWidth="87.0" text="Name" />
+            <TableColumn fx:id="tableColumnEmail" prefWidth="119.0" text="Email" />
+            <TableColumn fx:id="tableColumnBirthDate" text="Birth Date" />
+            <TableColumn fx:id="tableColumnBaseSalary" prefWidth="79.0" text="Base Salary" />
+            <TableColumn fx:id="tableColumnEDIT" prefWidth="62.0" />
+            <TableColumn fx:id="tableColumnREMOVE" />
         </columns>
       </TableView>
    </children>
